--- a/style.css
+++ b/style.css
@@ -10,6 +10,32 @@ body{
 
 header{
     background-color: #03034b;
+    display: inline-block;
+    width: 100%;
+}
+
+header nav{
+    display: inline-block;
+    width: 100%;
+    padding-bottom: 15px;
+}
+
+.submenu{
+    display: inline-block;
+}
+
+.submenu i{
+    margin-left: 10px;
+    color: #4357C8;
+}
+
+.submenu i:hover{
+    color: blue;
+}
+
+.logo{
+    display: inline-block;
+    margin: 10px;
 }
 
 .imagenLogo{
@@ -18,6 +44,18 @@ header{
 
 nav h6 {
     font-size: large;
+    display: inline-block;
+    margin: 10px;
+}
+
+.seeker{
+    display: inline-block;
+    margin-left: 25%;
+}
+
+.register{
+    display: inline-block;
+    margin-left: 20%;
 }
 
 .contactHeader{
@@ -31,13 +69,30 @@ nav h6 {
 
 /*Estilo para los link de los filtros*/
 
+
+
+.navFilter{
+    display: inline-block;
+}
+
 .filters{
     list-style: none;
+    margin-left: -40px;
+    margin-top: 0;
+}
+
+.filters button{
+    margin: 0;
+    width: 160px;
+    height: 80px;
+    background-color: #333;
+    border: none;
 }
 
 .filters a{
     color: #000;
 }
+
 
 /*Titulo*/
 
@@ -65,8 +120,36 @@ span{
 
 /*Producto*/
 
+.containerProduct{
+    margin: 10px;
+    border: 2px solid black;
+    width: 400px;
+}
+
+.containerProduct img{
+    width: 400px;
+}
+
+.containerProduct h3{
+    text-align: center;
+}
+
 .solicitar{
-    width: 100vh;
+    width: 400px;
     height: 4vh;
     background-color: #4357C8;
+}
+
+/* footer */
+
+footer div{
+    display: inline-block;
+}
+
+.mail-num{
+    margin-left: 30%;
+}
+
+.socialmedia{
+    margin-left: 40%;
 }
