--- a/style.css
+++ b/style.css
@@ -69,11 +69,10 @@ nav h6 {
 
 /*Estilo para los link de los filtros*/
 
-
-
 .navFilter{
-    display: inline-block;
+    margin-right: auto;
 }
+
 
 .filters{
     list-style: none;
@@ -98,9 +97,12 @@ nav h6 {
 
 h1{
     color: #4357C8;
+    margin-right: auto;
 }
 
 /*Estilo de la tabla*/
+
+
 
 th{
     background-color: #555;
@@ -120,36 +122,45 @@ span{
 
 /*Producto*/
 
+.container{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+}
+
 .containerProduct{
+    display: flex;
+    flex-direction: column;
     margin: 10px;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     width: 400px;
 }
 
 .containerProduct img{
-    width: 400px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.5;
 }
 
 .containerProduct h3{
-    text-align: center;
+    position: absolute;
+    margin: 150px;
+    margin-left: 180px;
 }
 
+
 .solicitar{
-    width: 400px;
-    height: 4vh;
+    width: 100%;
+    height: 8vh;
     background-color: #4357C8;
 }
 
 /* footer */
 
-footer div{
-    display: inline-block;
-}
-
-.mail-num{
-    margin-left: 30%;
-}
-
-.socialmedia{
-    margin-left: 40%;
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #040499;
 }
