--- a/style.css
+++ b/style.css
@@ -1,166 +1,664 @@
-*{
+@media only screen and (max-width:480px) {
+    
+    *{
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
+    }
+
+    body{
+        margin: 0;
+        display: grid;
+        width: 100%;
+        height: 100%;
+        grid-template-areas: "head"
+                             "filter"
+                             "section"
+                             "section"
+                             "footer";
+    }
+
+    header{
+        background-color: #144572d4;
+        display: grid;
+        width: 100%;
+        grid-template-rows:110px ;
+        height: 110px;
+        grid-area: head;
+    }
+
+        header nav{
+            display: grid;
+            grid-template-rows: 1fr ;
+            grid-template-columns: 1fr 2fr 1fr;
+            width: 100%;
+            padding-bottom: 15px;
+        }
+
+    .logo{
+        margin: 5px;
+        margin-top: 10px;
+    }
+    
+        .imagenLogo{
+            width: 100%;
+        }
+    
+    nav h6 {
+        display: none;
+    }
+    
+    .seeker{
+        grid-column: 2/3;
+        grid-row: 1/2;
+        text-align: center;
+        margin-top: 55px;
+    }
+    
+    .register{
+        grid-row: 1/2;
+        grid-column: 3/4;
+        margin-top: 10%;
+    }
+
+        .register button{
+            background-color: inherit;
+            outline: none;
+            border: none;
+        }
+
+            .register button a{
+                color: black;
+            }
+    
+    .contactHeader{
+        background-color: #000000;
+        height: 40px;
+        margin-top: 60px;
+        grid-column: 3/4;
+        grid-row: 1/2;
+        margin-right: 5px;
+        outline: none;
+        border: none;
+    }
+    
+        .contactHeader a{
+            color: #2D8B03;
+            text-decoration: none;
+        }
+
+    .navFilter{
+        grid-area: filter;
+        grid-row: 3/4;
+        grid-column: 1/2;
+        background-color: #333;
+    }
+
+        .filters{
+            margin-left: -40px;
+            display: flex;
+            flex-direction: row;
+            list-style: none;
+        }
+
+        .filters button{
+            margin: 0;
+            width: 110px;
+            height: 100%;
+            background-color: #333;
+            border: none;
+        }
+
+        .filters a{
+            color: #000;
+        }
+
+    section{
+        grid-area: section;
+        grid-row: 4;
+    }
+
+        .tableProduct{
+            display: none;
+        }
+
+            th{
+                background-color: #555;
+            }
+            
+            .textTdName{
+                color: #000;
+            }
+            
+            span{
+                color: green;
+            }
+
+        .container{
+            display: flex;
+            flex-flow: row wrap;
+            justify-content: center;
+        }
+        
+        .containerProduct{
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr;
+            height: 250px;
+            margin: 10px;
+            width: 300px;
+        }
+        
+        .containerProduct img{
+            grid-row: 1/3;
+            grid-column: 1/4;
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            opacity: 0.5;
+        }
+        
+        .containerProduct h3{
+            grid-column: 2/3;
+            grid-row: 2/3;
+            z-index: 1;
+            text-align: center;
+        }
+        
+        
+        .solicitar{
+            grid-row: 4/5;
+            grid-column: 1/4;
+            width: 100%;
+            height: 50px;
+            background-color: #4357C8;
+            z-index: 1;
+        }
+    footer{
+        grid-area: footer;
+        border-top:1px dashed black ;
+    }
+
+    footer div p{
+        text-align: center;
+    }
+
+    footer .socialmedia{
+        text-align: center;
+    }
+
 }
-body{
-    margin: 0;
+
+
+
+@media only screen and (min-width:480px) and (max-width:1024px) {
+    
+    *{
+        text-decoration: none;
+        font-family: 'Roboto', sans-serif;
+        }
+    
+        body{
+            margin: 0;
+            display: grid;
+            width: 100%;
+            height: 100%;
+            grid-template-areas: "head head"
+                                 "filter filter"
+                                 "section section"
+                                 "section section"
+                                 "footer footer";
+            grid-template-rows: 150px 50px 2fr ;
+        }
+    
+        header{
+            background-color: #144572d4;
+            display: grid;
+            width: 100%;
+            grid-template-rows:150px ;
+            height: 150px;
+            grid-area: head;
+        }
+    
+            header nav{
+                display: grid;
+                grid-template-rows: 75px 75px ;
+                grid-template-columns: 1fr 2fr 1fr;
+                width: 100%;
+                padding-bottom: 15px;
+            }
+     
+        .logo{
+            margin: 5px;
+            margin-top: 20px;
+            grid-row: 1/3;
+        }
+        
+            .imagenLogo{
+                width: 75%;
+                height: 75%;
+            }
+        
+        nav h6 {
+            display: none;
+        }
+        
+        .seeker{
+            grid-column: 2/3;
+            grid-row: 1/3;
+            display: flex;
+            align-items: center;
+            margin: 15%
+        }
+
+            .barSeeker{
+                width: 100%;
+            }
+        
+        .register{
+            grid-row: 1/2;
+            grid-column: 3/4;
+            margin-top: 10%;
+            display: flex;
+            align-items: center;
+        }
+    
+            .register button{
+                background-color: inherit;
+                outline: none;
+                border: none;
+            }
+    
+                .register button a{
+                    color: black;
+                }
+        
+        .contactHeader{
+            background-color: #000000;
+            height: 40px;
+            margin-top: 60px;
+            grid-column: 3/4;
+            grid-row: 1/3;
+            margin-right: 5px;
+            outline: none;
+            border: none;
+        }
+        
+            .contactHeader a{
+                color: #2D8B03;
+                text-decoration: none;
+            }
+    
+        .navFilter{
+            grid-area: filter;
+            grid-row: 2/3;
+            grid-column: 1/3;
+            background-color: #333;
+        }
+    
+            .filters{
+                margin-left: -40px;
+                display: flex;
+                flex-direction: row;
+                list-style: none;
+            }
+    
+            .filters button{
+                margin: 0;
+                width: 120px;
+                height: 100%;
+                background-color: #333;
+                border: none;
+                display: flex;
+                align-items: center;
+            }
+    
+            .filters a{
+                color: #000;
+            }
+    
+        section{
+            grid-area: section;
+            grid-row: 4;
+        }
+    
+            .container{
+                display: flex;
+                flex-flow: row wrap;
+                justify-content: center;
+            }
+
+                h1{
+                    grid-column: 2/4;
+                }
+
+                .tableProduct{
+                    display: none;
+                }
+
+                .tableProduct__mobile{
+                    margin: 0 20% 0 20%;
+                    text-align: center;
+                }
+
+                    th{
+                        background-color: #555;
+                    }
+                    
+                    .textTdName{
+                        color: #000;
+                    }
+                    
+                    span{
+                        color: green;
+                    }
+
+                
+                .containerProduct{
+                    display: grid;
+                    grid-template-columns: 1fr 1fr 1fr;
+                    grid-template-rows: 1fr 1fr 1fr 1fr;
+                    height: 250px;
+                    margin: 10px;
+                    width: 300px;
+                }
+                
+                .containerProduct img{
+                    grid-row: 1/3;
+                    grid-column: 1/4;
+                    width: 100%;
+                    height: 200px;
+                    object-fit: cover;
+                    opacity: 0.5;
+                }
+                
+                .containerProduct h3{
+                    grid-column: 2/3;
+                    grid-row: 2/3;
+                    z-index: 1;
+                    text-align: center;
+                }
+                
+                
+                .solicitar{
+                    grid-row: 4/5;
+                    grid-column: 1/4;
+                    width: 100%;
+                    height: 50px;
+                    background-color: #4357C8;
+                    z-index: 1;
+                }
+    
+        footer{
+            grid-area: footer;
+            border-top:1px dashed black ;
+        }
+    
+        footer div p{
+            text-align: center;
+        }
+    
+        footer .socialmedia{
+            text-align: center;
+        }
+
 }
 
-/*Estilo del header*/
 
-header{
-    background-color: #03034b;
-    display: inline-block;
-    width: 100%;
-}
+@media only screen and (min-width:800px) {
 
-header nav{
-    display: inline-block;
-    width: 100%;
-    padding-bottom: 15px;
-}
+    .tableProduct{
+        display: inline-block;
+    }
 
-.submenu{
-    display: inline-block;
-}
+    .tableProduct__mobile{
+        display: none;
+    }
 
-.submenu i{
-    margin-left: 10px;
-    color: #4357C8;
-}
-
-.submenu i:hover{
-    color: blue;
-}
-
-.logo{
-    display: inline-block;
-    margin: 10px;
-}
-
-.imagenLogo{
-    width: 128px;
-}
-
-nav h6 {
-    font-size: large;
-    display: inline-block;
-    margin: 10px;
-}
-
-.seeker{
-    display: inline-block;
-    margin-left: 25%;
-}
-
-.register{
-    display: inline-block;
-    margin-left: 20%;
-}
-
-.contactHeader{
-    background-color: #000000;
-}
-
-.contactHeader a{
-    color: #2D8B03;
-    text-decoration: none;
-}
-
-/*Estilo para los link de los filtros*/
-
-.navFilter{
-    margin-right: auto;
 }
 
 
-.filters{
-    list-style: none;
-    margin-left: -40px;
-    margin-top: 0;
+
+@media only screen and (min-width:1024px) {
+
+    *{
+        text-decoration: none;
+        font-family: 'Roboto', sans-serif;
+        }
+    
+        body{
+            margin: 0;
+            display: grid;
+            width: 100%;
+            height: 100%;
+            grid-template-areas: "head   head    head"
+                                 "filter section section"
+                                 "filter section section"
+                                 "filter section section"
+                                 "filter footer  footer";
+            grid-template-rows: 150px 50px 2fr ;
+            grid-template-columns: 0.8fr 2fr 2fr;
+        }
+    
+        header{
+            background-color: #144572d4;
+            display: grid;
+            width: 100%;
+            grid-template-rows:150px ;
+            height: 150px;
+            grid-area: head;
+        }
+    
+            header nav{
+                display: grid;
+                grid-template-rows: 75px 75px ;
+                grid-template-columns: 1fr 2fr 1fr ;
+                width: 100%;
+                padding-bottom: 15px;
+            }
+     
+        .logo{
+            margin: 5px;
+            margin-top: 20px;
+            grid-row: 1/3;
+        }
+        
+            .imagenLogo{
+                width: 60%;
+                height: 100%;
+            }
+/*         
+        nav h6{
+            grid-row: 1/2;
+            grid-column: 2/3;
+            color: #000;
+        } */
+        
+        .seeker{
+            grid-column: 2/3;
+            grid-row: 1/3;
+            display: flex;
+            align-items: center;
+            margin: 15%
+        }
+
+            .barSeeker{
+                width: 100%;
+            }
+        
+        .register{
+            grid-row: 1/2;
+            grid-column: 3/4;
+            margin-top: 10%;
+            display: flex;
+            align-items: center;
+        }
+    
+            .register button{
+                font-size: 16px;
+                border: none;
+                outline: none;
+                padding: 14px 16px;
+                background-color: inherit;
+                margin: 0;
+            }
+
+            .register button:hover{
+                background-color: #2a3ba0;
+            }
+    
+                .register button a{
+                    color: black;
+                }
+        
+        .contactHeader{
+            background-color: #000000;
+            height: 40px;
+            grid-column: 3/4;
+            grid-row: 2/3;
+            margin-right: 5px;
+            outline: none;
+            border: none;
+        }
+        
+            .contactHeader a{
+                color: #2D8B03;
+                text-decoration: none;
+            }
+    
+        .navFilter{
+            grid-area: filter;
+            grid-row: 2/6;
+            grid-column: 1/2;
+            background-color: #364151;
+        }
+    
+            .filters{
+                margin-left: -40px;
+                display: flex;
+                flex-direction: column;
+                list-style: none;
+                margin-top: 0;
+            }
+    
+            .filters button{
+                margin: 0;
+                width: 100%;
+                height: 85px;
+                border:none;
+                background-color: #364151;
+                border-bottom: 1px solid #000;
+                display: flex;
+                align-items: center;
+                outline: none;
+            }
+
+            .filters button:hover{
+                background-color: #fff;
+            }
+    
+            .filters a{
+                color: #fff;
+                font-size: 16px;
+            }
+
+                .filters button:hover a{
+                    color: #000;
+                }
+    
+        section{
+            grid-area: section;
+            grid-row: 4;
+        }
+    
+            .container{
+                display: flex;
+                flex-flow: row wrap;
+                justify-content: center;
+            }
+
+                h1{
+                    grid-column: 2/4;
+                }
+
+                .tableProduct{
+                    margin: 10px;
+                }
+
+                .tableProduct__mobile{
+                   display: none;
+                }
+
+                    th{
+                        background-color: #555;
+                    }
+                    
+                    .textTdName{
+                        color: #000;
+                    }
+                    
+                    span{
+                        color: green;
+                    }
+
+                
+                .containerProduct{
+                    display: grid;
+                    grid-template-columns: 1fr 1fr 1fr;
+                    grid-template-rows: 1fr 1fr 1fr 1fr;
+                    height: 250px;
+                    margin: 10px;
+                    width: 300px;
+                }
+                
+                .containerProduct img{
+                    grid-row: 1/3;
+                    grid-column: 1/4;
+                    width: 100%;
+                    height: 200px;
+                    object-fit: cover;
+                    opacity: 0.5;
+                }
+                
+                .containerProduct h3{
+                    grid-column: 2/3;
+                    grid-row: 2/3;
+                    z-index: 1;
+                    text-align: center;
+                }
+                
+                
+                .solicitar{
+                    grid-row: 4/5;
+                    grid-column: 1/4;
+                    width: 100%;
+                    height: 50px;
+                    background-color: #4357C8;
+                    z-index: 1;
+                }
+    
+        footer{
+            grid-area: footer;
+            border-top:1px dashed black ;
+        }
+    
+        footer div p{
+            text-align: center;
+        }
+    
+        footer .socialmedia{
+            text-align: center;
+        }
+
 }
 
-.filters button{
-    margin: 0;
-    width: 160px;
-    height: 80px;
-    background-color: #333;
-    border: none;
-}
-
-.filters a{
-    color: #000;
-}
-
-
-/*Titulo*/
-
-h1{
-    color: #4357C8;
-    margin-right: auto;
-}
-
-/*Estilo de la tabla*/
 
 
 
-th{
-    background-color: #555;
-}
-
-td{
-    color: #001fd2;
-}
-
-.textTdName{
-    color: #001fd2;
-}
-
-span{
-    color: green;
-}
-
-/*Producto*/
-
-.container{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-}
-
-.containerProduct{
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-    /* border: 2px solid black; */
-    width: 400px;
-}
-
-.containerProduct img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: 0.5;
-}
-
-.containerProduct h3{
-    position: absolute;
-    margin: 150px;
-    margin-left: 180px;
-}
 
 
-.solicitar{
-    width: 100%;
-    height: 8vh;
-    background-color: #4357C8;
-}
 
-/* footer */
 
-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    background-color: #040499;
-}
+
+
+
+
