--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@
             width: 100%;
             height: 200px;
             object-fit: cover;
-            opacity: 0.5;
+            opacity: 0.8;
         }
         
         .containerProduct h3{
@@ -368,7 +368,7 @@
                     width: 100%;
                     height: 200px;
                     object-fit: cover;
-                    opacity: 0.5;
+                    opacity: 0.8;
                 }
                 
                 .containerProduct h3{
@@ -466,6 +466,11 @@
                 width: 60%;
                 height: 100%;
             }
+
+                .imagenLogo:hover{
+                    transform: rotate(360deg);
+                    transition: all 3s;
+                }
 /*         
         nav h6{
             grid-row: 1/2;
@@ -483,7 +488,13 @@
 
             .barSeeker{
                 width: 100%;
+                height: 16px;
+                transition: height 1.5s;
             }
+
+                .barSeeker:hover{
+                    height: 40px;
+                }
         
         .register{
             grid-row: 1/2;
@@ -513,12 +524,18 @@
         .contactHeader{
             background-color: #000000;
             height: 40px;
+            width: 160px;
             grid-column: 3/4;
             grid-row: 2/3;
             margin-right: 5px;
             outline: none;
             border: none;
         }
+
+            .contactHeader:hover{
+                transform: skew(20deg,10deg);
+                transition: all 1s;
+            }
         
             .contactHeader a{
                 color: #2D8B03;
@@ -530,6 +547,7 @@
             grid-row: 2/6;
             grid-column: 1/2;
             background-color: #364151;
+                z-index: 1000;
         }
     
             .filters{
@@ -580,6 +598,11 @@
                     grid-column: 2/4;
                 }
 
+                    h1:hover{
+                        transform: translate(10px,20px);
+                        transition: all 1.5s;
+                    }
+
                 .tableProduct{
                     margin: 10px;
                 }
@@ -609,6 +632,12 @@
                     margin: 10px;
                     width: 300px;
                 }
+
+                    .containerProduct:hover{
+                        transform: scale(1.5);
+                        transition: all 1s;
+                        z-index: 100;
+                    }
                 
                 .containerProduct img{
                     grid-row: 1/3;
@@ -616,7 +645,7 @@
                     width: 100%;
                     height: 200px;
                     object-fit: cover;
-                    opacity: 0.5;
+                    opacity: 0.8;
                 }
                 
                 .containerProduct h3{
@@ -639,6 +668,7 @@
         footer{
             grid-area: footer;
             border-top:1px dashed black ;
+            background-image: linear-gradient(to bottom right, rgb(87, 98, 212), rgb(80, 86, 193), rgb(73, 73, 174), rgb(66, 61, 155), rgb(59, 48, 136), rgb(52, 36, 117), rgb(54, 57, 133), rgb(57, 78, 149), rgb(59, 100, 165), rgb(61, 121, 180), rgb(64, 142, 196), rgb(66, 163, 212));
         }
     
         footer div p{
