--- a/style.css
+++ b/style.css
@@ -117,22 +117,6 @@
         grid-row: 4;
     }
 
-        .tableProduct{
-            display: none;
-        }
-
-            th{
-                background-color: #555;
-            }
-            
-            .textTdName{
-                color: #000;
-            }
-            
-            span{
-                color: green;
-            }
-
         .container{
             display: flex;
             flex-flow: row wrap;
@@ -331,14 +315,13 @@
                     grid-column: 2/4;
                 }
 
-                .tableProduct{
-                    display: none;
-                }
-
-                .tableProduct__mobile{
-                    margin: 0 20% 0 20%;
-                    text-align: center;
-                }
+                #carouselExampleFade{
+                    grid-column: 2/4;
+                    grid-row: 3/4;
+                    width: 80%;
+                    height: 100%;
+                    margin-bottom: 10px;
+             }
 
                     th{
                         background-color: #555;
@@ -406,13 +389,13 @@
 
 @media only screen and (min-width:800px) {
 
-    .tableProduct{
-        display: inline-block;
-    }
-
-    .tableProduct__mobile{
-        display: none;
-    }
+    #carouselExampleFade{
+        grid-column: 2/4;
+        grid-row: 3/4;
+        width: 80%;
+        height: 100%;
+        margin-bottom: 10px;
+ }
 
 }
 
@@ -423,7 +406,7 @@
     *{
         text-decoration: none;
         font-family: 'Roboto', sans-serif;
-        }
+    }
     
         body{
             margin: 0;
@@ -467,17 +450,6 @@
                 height: 100%;
             }
 
-                .imagenLogo:hover{
-                    transform: rotate(360deg);
-                    transition: all 3s;
-                }
-/*         
-        nav h6{
-            grid-row: 1/2;
-            grid-column: 2/3;
-            color: #000;
-        } */
-        
         .seeker{
             grid-column: 2/3;
             grid-row: 1/3;
@@ -488,13 +460,16 @@
 
             .barSeeker{
                 width: 100%;
-                height: 16px;
-                transition: height 1.5s;
+                height: 24px;
             }
 
-                .barSeeker:hover{
-                    height: 40px;
-                }
+            .buttonSeeker{
+                height: 26px;
+            }
+
+            .buttonSeeker i{
+                font-size: smaller;
+            }
         
         .register{
             grid-row: 1/2;
@@ -519,6 +494,7 @@
     
                 .register button a{
                     color: black;
+                    text-decoration: none;
                 }
         
         .contactHeader{
@@ -531,11 +507,6 @@
             outline: none;
             border: none;
         }
-
-            .contactHeader:hover{
-                transform: skew(20deg,10deg);
-                transition: all 1s;
-            }
         
             .contactHeader a{
                 color: #2D8B03;
@@ -577,6 +548,8 @@
             .filters a{
                 color: #fff;
                 font-size: 16px;
+                text-decoration: none;
+                margin-left: 5px;
             }
 
                 .filters button:hover a{
@@ -598,29 +571,16 @@
                     grid-column: 2/4;
                 }
 
-                    h1:hover{
-                        transform: translate(10px,20px);
-                        transition: all 1.5s;
-                    }
+               #carouselExampleFade{
+                   grid-column: 2/4;
+                   grid-row: 3/4;
+                   width: 80%;
+                   height: 100%;
+                   margin-bottom: 10px;
+            }
 
-                .tableProduct{
-                    margin: 10px;
-                }
-
-                .tableProduct__mobile{
-                   display: none;
-                }
-
-                    th{
-                        background-color: #555;
-                    }
-                    
-                    .textTdName{
-                        color: #000;
-                    }
-                    
-                    span{
-                        color: green;
+                    .d-block w-100 img{
+                    object-fit: cover;
                     }
 
                 
